--- a/Diwen.CSDR/Diwen.CSDR.csproj
+++ b/Diwen.CSDR/Diwen.CSDR.csproj
@@ -1,10 +1,40 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
+    <Version>0.0.0.1</Version>
+    <!-- Add the myget feed, without altering any other configurations. -->
+    <RestoreAdditionalProjectSources>https://dotnet.myget.org/F/dotnet-core/api/v3/index.json</RestoreAdditionalProjectSources>
   </PropertyGroup>
 
-  <ItemGroup>
-      <Content Include="classes\*.*" />
+  <PropertyGroup Condition="'$(TargetFramework)'== 'net452'">
+    <!-- Make .NET 4.5.2 reference assemblies available even on Linux -->
+    <FrameworkPathOverride>$(NuGetPackageRoot)microsoft.targetingpack.netframework.v4.5.2/1.0.1/lib/net452/</FrameworkPathOverride>
+  </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)'== 'net452'">
+      <!-- Make sure the reference assemblies are available -->
+      <PackageReference Include="Microsoft.TargetingPack.NETFramework.v4.5.2"
+                        Version="1.0.1" ExcludeAssets="All" PrivateAssets="All" />
+      <!-- The DLL case has changed between 4.5 and 4.6; this avoids a warning. -->
+      <Reference Include="System.XML" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="LICENSE" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <Authors>John Nordberg</Authors>
+    <Owners>diwen</Owners>
+    <PackageLicenseUrl>http://www.gnu.org/licenses/lgpl.txt</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/dgm9704/CSDR</PackageProjectUrl>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Description>.NET library for handling CSDR messages
+Please consider giving feedback if you use the library in your own software projects.</Description>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <Copyright>Copyright 2018 John Nordberg</Copyright>
+    <PackageTags>.NET CSDR</PackageTags>
+  </PropertyGroup>
+
 </Project>
